== Changelog ==

This file contains only old changelog. See readme.txt for newer versions.

= 1.3.0 - Dec 23, 2021 =

  * Bug
    * [Make exception for WooCommerce exported CSV file](https://wordpress.org/support/topic/make-exception-for-woocommerce-exported-csv-file/)
  * Enhancements
    * [Added support for `esc_url()`](https://wordpress.org/support/topic/add-for-esc_url/)

= 1.2.1 - Jul 16, 2021 =

  * Bug
    * [Compatibility issue between "Yoast SEO" and "Make Paths Relative"](https://wordpress.org/support/topic/compatibility-issue-between-yoast-seo-and-make-paths-relative/)

= 1.2.0 - Jul 8, 2021 =

  * Bug
    * Relative link issue on sitemap

= 1.1.2 - Aug 23, 2019 =

  * Bug
    * [conflicts with Yoast Sitemap](https://github.com/yasglobal/make-paths-relative/issues/2)

= 1.1.1 - May 23, 2019 =

  * Bug
    * Link gets empty in RSS feed

= 1.1.0 - May 23, 2019 =

  * Bug
    * Preserve absolute links in RSS feed. For more detail, please visit:
      https://wordpress.org/support/topic/preserve-absolute-links-in-rss-feed/

= 1.0.0 - Sept 26, 2018 =

  * Enhancements
    * Added Tags and Custom Taxonomy Support
    * Change priorities for all the filters to enhance the URLs relative performance
    * Removed `make-paths-relative-main.php` dependency

= 0.6 - May 25, 2018 =

  * Enhancements
    * Added Privacy Policy Section which will be shown in Admin Dashboard for
      WordPress 4.9.6 or higher

  * Bug
    * Fixed redirect issue for media when it is attached to post.

= 0.5.7 - Jan 26, 2018 =

  * Update text domain on about page

= 0.5.6 - Jan 25, 2018 =

  * Fixed PHP Notices on saving settings

= 0.5.5 - Jan 09, 2018 =

  * Changes related to Settings Pages

= 0.5.4 - Jan 05, 2018 =

  * Fixed PHP Notice

= 0.5.3 - Jan 04, 2018 =

  * Enhancements
    * Added Filter to enable all the settings on plugin activation
    * Added Uninstall hook to remove the plugin settings

= 0.5.2 - Dec 14, 2017 =
