@@ -28,6 +28,6 @@
 		"gulp-uglify": "3.0.2"
 	},
 	"makePathsRelative": {
-		"pluginVersion": "1.3.0"
+		"pluginVersion": "2.0.0"
 	}
 }
