@@ -2,112 +2,76 @@
 Contributors: sasiddiqui, aliya-yasir
 Tags: GDPR, URLs, Links, Paths, Relative, permalink, Absolute URLs, Relative URLs, scripts src, styles src, image src, remove_absolute
 Requires at least: 3.5
-Tested up to: 6.0
-Stable tag: 1.3.0
+Tested up to: 6.5
+Stable tag: 2.0.0
 License: GPLv3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
 
 Convert Absolute URLs to be relative in your fingertip.
 
-== Description ==
+## Description
 
-This plugin can make(convert) the paths(URLs) to a relative instead of absolute. This plugin is useful for using relative URLs. The given below list of permalinks and src can be easily converted to a relative:
+This powerful plugin simplifies website maintenance by automatically converting absolute paths (URLs) for resources like links, scripts, stylesheets, and images to relative paths. This ensures your website functions flawlessly regardless of its location on a server or domain.
 
-* Post Permalinks
-* Archive Permalinks
-* Author Permalinks
-* Term Permalinks
-* Scripts Paths(src)
-* Styles Paths(src)
-* Image Paths(src)
+### Enhanced Efficiency and Flexibility
 
-All the above permalinks and src can be converted to a relative instead of absolute by using this plugin. You can select the options from the plugin settings page.
+- **Seamless Relocation:** Move your website with confidence, knowing all paths will adjust accordingly, preventing broken links and preserving a seamless user - experience.
+- **Centralized Control:** Update paths once in a central location, eliminating the need for tedious, site-wide modifications.
+- **Potential Performance Boost:** Relative paths can, in some cases, improve website loading times.
 
-= Filters =
+### Whitelist Your Domains (Optional)
 
-If you want to exclude some Permalink or src to be relative then you can use `paths_relative` filter in your theme's `functions.php` or in your custom plugin.
+For extra control, you can specify a list of domains that will always be converted to relative paths. This ensures internal links are always optimized while allowing external resources to function properly.
 
-Your filter may look like this (Below filter would make the `jquery.js` Path to absolute):
+### Embrace a Streamlined Approach
 
-`
-function yasglobal_change_path( $link ) {
-  if( $link == '/wp-includes/js/jquery/jquery.js?ver=1.12.4' ) {
-    $link = site_url().'/wp-includes/js/jquery/jquery.js?ver=1.12.4';
-  }
-  return $link;
-}
-add_filter( 'paths_relative', 'yasglobal_change_path' );
-`
+This plugin empowers you to focus on creating exceptional content while eliminating the burden of managing absolute paths. Take control, optimize your workflow, and ensure your website's continued success!
 
-If you don't want to Make the Paths relative for srcset(Responsive Images) then just add the below-mentioned line in your theme's `functions.php`.
-
-`
-add_filter( 'srcset_paths_relative', '__return_false' );
-`
+### Filters
 
 If you want to make plugin works and all the paths relative without going to check/visit Settings Page so, just add this line in your theme's `functions.php`.
 
-`
+```php
 add_filter( 'make_paths_relative_activate_all', '__return_true' );
-`
+```
 
-= Make sure to check the settings Page =
+**Note**: Make sure to check the settings Page.
 
-=== Thanks for the Support ===
+### Thanks for the Support
 
 The support from the users that love Make Paths Relative is huge. You can support Make Paths Relative future development and help to make it even better by giving a 5-star rating with a nice message to me :)
 
-=== Bug reports ===
-
-Bug reports for Make Paths Relative are [welcomed on GitHub](https://github.com/yasglobal/make-paths-relative). Please note GitHub is not a support forum, and issues that aren't properly qualified as bugs will be closed.
-
-== Installation ==
+## Installation
 
 This process defines you the steps to follow either you are installing through WordPress or Manually from FTP.
 
-**From within WordPress**
+### From within WordPress
 
 1. Visit 'Plugins > Add New'
 2. Search for Make Paths Relative
 3. Activate Make Paths Relative from your Plugins page.
 4. Go to "after activation" below.
 
-**Manually**
+### Manually
 
 1. Upload the `make-paths-relative` folder to the `/wp-content/plugins/` directory
 2. Activate Make Paths Relative through the 'Plugins' menu in WordPress
 3. Go to "after activation" below.
 
-**After activation**
+### After activation
 
 1. Go to the plugin settings page and set up the plugin for your site.
 2. You're done!
 
-== Screenshots ==
+## Changelog
 
-* You can select the options from the settings page ([here](http://www.example.com/wp-admin/admin.php?page=make-paths-relative-settings)).
+= June 28, 2024 =
 
-== Frequently Asked Questions ==
-
-= Q. Why should I install this plugin? =
-A. Installing this plugin is the easiest way to make the paths(Permalinks + src) relative.
-
-= Q. May I select the paths which I want to be shown as relative items? =
-A. Yes, You can select the items you want to be relative.
-
-= Q. May I exclude some items to be shown as absolute? =
-A. Yes, You can exclude the items by using the add_filter (You can find the filters in the [Description Area](https://wordpress.org/plugins/make-paths-relative/#description-header) ).
-
-== Changelog ==
-
-= - June 30, 2023 =
-
-  * Bug
-    * [function clean_url conflict](https://wordpress.org/support/topic/function-clean_url-conflict/)
-		* [Compatibility problem with v.1.3.0 and WPForms](https://wordpress.org/support/topic/compatibility-problem-with-v-1-3-0-and-wpforms/)
-		* [meta twitter:image not working well with Yoast](https://wordpress.org/support/topic/meta-twitterimage-not-working-well-with-yoast/)
-  * Enhancements
-    * [Added support for `esc_url()`](https://wordpress.org/support/topic/add-for-esc_url/)
+	* Security Enhancement:
+	  * Implemented a nonce mechanism to safeguard page updates, preventing unauthorized modifications.
+	* Feature Additions:
+	  * Define multiple domains to be act as relative.
+		* Enhanced content control by allowing removal of specific domains from the entire HTML body tag.
 
 = Earlier versions =
 
