@@ -2,6 +2,15 @@
 
 This file contains only old changelog. See readme.txt for newer versions.
 
+= June 30, 2023 =
+
+  * Bug
+    * [function clean_url conflict](https://wordpress.org/support/topic/function-clean_url-conflict/)
+		* [Compatibility problem with v.1.3.0 and WPForms](https://wordpress.org/support/topic/compatibility-problem-with-v-1-3-0-and-wpforms/)
+		* [meta twitter:image not working well with Yoast](https://wordpress.org/support/topic/meta-twitterimage-not-working-well-with-yoast/)
+  * Enhancements
+    * [Added support for `esc_url()`](https://wordpress.org/support/topic/add-for-esc_url/)
+
 = 1.3.0 - Dec 23, 2021 =
 
   * Bug
